--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
   <h1>
-    Welcome to {{title}}!!
+    This is {{title}}!!
   </h1>
   ... Starter Files ...
 </div>
