--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,13 @@
         <div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
-                <input type="text">
+                <input type="text"
+                [(ngModel)]='listFilter'>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h4>Filtered By: </h4>
+                <h4>Filtered By: {{listFilter}} </h4>
             </div>
         </div>
         <div class="table-responsive">
@@ -21,7 +22,7 @@
                         <th>
                             <button class="btn btn-primary" 
                             (click)='toggleImage()'>
-                                Show Image
+                                {{showImage ? 'Hide' : 'Show'}} Image
                             </button>
                         </th>
                         <th>Name</th>
@@ -41,7 +42,7 @@
                         </td>
                         <td>{{product.productName}}</td>
                         <td>{{product.productCode}}</td>
-                        <td>{{product.productPrice}}</td>
+                        <td>{{product.price | currency:'USD':'symbol'}}</td>
                         <td>{{product.starRating}}</td>
                         <td>{{product.description}}</td>
                     </tr>
