--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -43,7 +43,7 @@
                         <td>{{product.productName}}</td>
                         <td>{{product.productCode }}</td>
                         <td>{{product.price | currency:'USD':'symbol'}}</td>
-                        <td>{{product.starRating}}</td>
+                        <td><pm-star [rating]='product.starRating'></pm-star></td>
                         <td>{{product.description}}</td>
                     </tr>
                 </tbody>
